--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 pandas
 numpy
 tqdm
-torch==2.0.0 
-torchvision==0.15.1
+torch
+torchvision
 torchmetrics
 tensorflow
 scikit-learn
 matplotlib
 wandb
 ultralytics
-PIL
-tempfile
+pillow
 scikit-learn
+diffusers
+transformers
+accelerate
+gradio
+safetensors
+invisible_watermark
